Fixed short product description when it's too long

--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -37,6 +37,10 @@
             box-shadow: 7px 7px 0px $color-black-muted-very-well;
         }
 
+        .woocommerce-product-details__short-description {
+            width: calc(100% - #{$gutter * 2});
+        }
+
         .amount {
             display: inline-block;
             position: relative;
